<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeaderId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_detail_id" />

            <EditText
                android:id="@+id/txtDetailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:focusedByDefault="true"
                android:hint="@string/txt_detail_id"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="5dp" />

            <TextView
                android:id="@+id/txtHeaderBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_detail_brand" />

            <EditText
                android:id="@+id/txtDetailBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/txt_detail_brand"
                android:inputType="text|textCapCharacters"
                android:minHeight="48dp"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txtHeaderDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_detail_description" />

            <EditText
                android:id="@+id/txtDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/txt_detail_description"
                android:lines="2"
                android:minHeight="48dp"
                android:minLines="2"
                android:padding="5dp" />

            <TextView
                android:id="@+id/txtHeaderPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_detail_price" />

            <EditText
                android:id="@+id/txtDetailPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/txt_detail_price"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="5dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/txt_edit_item"
                android:src="@android:drawable/stat_notify_error" />

        </LinearLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDetailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/txt_edit_item"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDetailDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/txt_delete_item"
        android:src="@drawable/ic_baseline_delete_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDetailEdit" />

    <Button
        android:id="@+id/btnDetailCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btn_detail_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDetailSave"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDetailSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btn_detail_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDetailCancel" />


</androidx.constraintlayout.widget.ConstraintLayout>